src/objects/fc_csc__Invoice_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__Applied_Amount__c</fullName>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Invoice_Balance_Impact__c</fullName>
        <label>Invoice Balance Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Invoice Transaction</label>
    <nameField>
        <label>Invoice Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>